Added a line to end the drag session on a drop. Fixes bug 51904. r=evaughan/hyatt